--- a/public/site/assets/css/mystyles.css
+++ b/public/site/assets/css/mystyles.css
@@ -46,3 +46,66 @@
     border: 1px solid #ced4da;
     background-color: #fff;
 }
+
+/* contact us */
+.contact-us-body {
+    font-family: 'Tahoma', sans-serif;
+    background-color: #f3f3f3;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.contact-us-container {
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 800px;
+}
+
+.contact-us-card {
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.contact-us-header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.contact-us-header h1 {
+    color: #333;
+    font-size: 28px;
+    margin: 0;
+}
+
+.contact-us-header h3 {
+    color: #666;
+    font-size: 18px;
+    margin: 0;
+}
+
+.contact-us-form table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.contact-us-form th,
+.contact-us-form td {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align: right;
+}
+
+.contact-us-form th {
+    background-color: #f3f3f3;
+}
+/* .contact_us_form td{
+    font-size: 30px;
+    color:black
+} */
